syntax = "proto3";

option go_package = "github.com/11090815/mayy/protobuf/pmsp";

package pmsp;

// SerializedIdentity 表示一个 Identity 的序列化形式。
message SerializedIdentity {
    string Mspid    = 1; // Mspid 表示与该 Identity 先关联的 msp 服务提供商的标识符。
    bytes id_bytes  = 2; // 表示 Identity 的序列化形式，按照其 msp 服务提供商的规则进行序列化。
}

// protoc --proto_path=. --proto_path=$GOPATH/src/ --go_out=,paths=source_relative:. identities.proto
